src/parser.out
shift/reduce conflict in state 87 resolved as shift.
shift/reduce conflict in state 87 resolved as shift.
shift/reduce conflict in state 89 resolved as shift.
shift/reduce conflict in state 89 resolved as shift.


Unused terminals:

   COMENT
   NE

Grammar

Rule 1     Program -> ListSent
Rule 2     ListSent -> Sent
Rule 3     ListSent -> ListSent Sent
Rule 4     Sent -> SentAsig
Rule 5     Sent -> SentIf
Rule 6     Sent -> SentWhile
Rule 7     Sent -> SentFor
Rule 8     Sent -> READ PAR_AB IDENT PAR_CERR PUNTO_Y_COMA
Rule 9     Sent -> WRITE PAR_AB Expresion PAR_CERR PUNTO_Y_COMA
Rule 10    ParteDir -> IDENT
Rule 11    SentAsig -> ParteDir ASIG Expresion PUNTO_Y_COMA
Rule 12    SentAsig2 -> ParteDir ASIG Expresion
Rule 13    SentIf -> ParteIf SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
Rule 14    SentIf -> ParteIf SentVIf2
Rule 15    ParteIf -> IF PAR_AB Cond PAR_CERR LLAVE_AB
Rule 16    SentVIf -> ListSent LLAVE_CERR
Rule 17    SentVIf2 -> ListSent LLAVE_CERR
Rule 18    SentVElse -> ListSent
Rule 19    SentFor -> ParteIniFor ParteSentIncF LSentFor LLAVE_CERR
Rule 20    ParteIniFor -> SeccionIni Cond PUNTO_Y_COMA
Rule 21    SeccionIni -> FOR PAR_AB SentAsig2 PUNTO_Y_COMA
Rule 22    ParteSentIncF -> SentAsig2 PAR_CERR LLAVE_AB
Rule 23    LSentFor -> ListSent
Rule 24    SentWhile -> ParteWhile ParteSentW LLAVE_CERR
Rule 25    ParteWhile -> WhileParAb Cond PAR_CERR LLAVE_AB
Rule 26    WhileParAb -> WHILE PAR_AB
Rule 27    ParteSentW -> ListSent
Rule 28    Expresion -> Expresion SU Expresion
Rule 29    Expresion -> Expresion RE Expresion
Rule 30    Expresion -> Expresion MULT Expresion
Rule 31    Expresion -> Expresion DIV Expresion
Rule 32    Expresion -> Expresion MOD Expresion
Rule 33    Expresion -> IDENT
Rule 34    Expresion -> Constante
Rule 35    Expresion -> PAR_AB Expresion PAR_CERR
Rule 36    Expresion -> RE Expresion
Rule 37    Cond -> Expresion MENOR_IGUAL Expresion
Rule 38    Cond -> Expresion MENOR_QUE Expresion
Rule 39    Cond -> Expresion MAYOR_IGUAL Expresion
Rule 40    Cond -> Expresion MAYOR_QUE Expresion
Rule 41    Cond -> Expresion IGUAL_IGUAL Expresion
Rule 42    Cond -> Expresion DISTINTO Expresion
Rule 43    Cond -> Expresion
Rule 44    Cond -> Cond YLOG Cond
Rule 45    Cond -> Cond OLOG Cond
Rule 46    Constante -> TBOOLEAN
Rule 47    Constante -> FBOOLEAN
Rule 48    Constante -> ENTERO
Rule 49    Constante -> REAL

Terminals, with rules where they appear

ASIG                 : 11 12
COMENT               : 
DISTINTO             : 42
DIV                  : 31
ELSE                 : 13
ENTERO               : 48
FBOOLEAN             : 47
FOR                  : 21
IDENT                : 8 10 33
IF                   : 15
IGUAL_IGUAL          : 41
LLAVE_AB             : 13 15 22 25
LLAVE_CERR           : 13 16 17 19 24
MAYOR_IGUAL          : 39
MAYOR_QUE            : 40
MENOR_IGUAL          : 37
MENOR_QUE            : 38
MOD                  : 32
MULT                 : 30
NE                   : 
OLOG                 : 45
PAR_AB               : 8 9 15 21 26 35
PAR_CERR             : 8 9 15 22 25 35
PUNTO_Y_COMA         : 8 9 11 20 21
RE                   : 29 36
READ                 : 8
REAL                 : 49
SU                   : 28
TBOOLEAN             : 46
WHILE                : 26
WRITE                : 9
YLOG                 : 44
error                : 

Nonterminals, with rules where they appear

Cond                 : 15 20 25 44 44 45 45
Constante            : 34
Expresion            : 9 11 12 28 28 29 29 30 30 31 31 32 32 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43
LSentFor             : 19
ListSent             : 1 3 16 17 18 23 27
ParteDir             : 11 12
ParteIf              : 13 14
ParteIniFor          : 19
ParteSentIncF        : 19
ParteSentW           : 24
ParteWhile           : 24
Program              : 0
SeccionIni           : 20
Sent                 : 2 3
SentAsig             : 4
SentAsig2            : 21 22
SentFor              : 7
SentIf               : 5
SentVElse            : 13
SentVIf              : 13
SentVIf2             : 14
SentWhile            : 6
WhileParAb           : 25


Parsing method: LALR


state 0

    (0) S' -> . Program
    (1) Program -> . ListSent
    (2) ListSent -> . Sent
    (3) ListSent -> . ListSent Sent
    (4) Sent -> . SentAsig
    (5) Sent -> . SentIf
    (6) Sent -> . SentWhile
    (7) Sent -> . SentFor
    (8) Sent -> . READ PAR_AB IDENT PAR_CERR PUNTO_Y_COMA
    (9) Sent -> . WRITE PAR_AB Expresion PAR_CERR PUNTO_Y_COMA
    (11) SentAsig -> . ParteDir ASIG Expresion PUNTO_Y_COMA
    (13) SentIf -> . ParteIf SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
    (14) SentIf -> . ParteIf SentVIf2
    (24) SentWhile -> . ParteWhile ParteSentW LLAVE_CERR
    (19) SentFor -> . ParteIniFor ParteSentIncF LSentFor LLAVE_CERR
    (10) ParteDir -> . IDENT
    (15) ParteIf -> . IF PAR_AB Cond PAR_CERR LLAVE_AB
    (25) ParteWhile -> . WhileParAb Cond PAR_CERR LLAVE_AB
    (20) ParteIniFor -> . SeccionIni Cond PUNTO_Y_COMA
    (26) WhileParAb -> . WHILE PAR_AB
    (21) SeccionIni -> . FOR PAR_AB SentAsig2 PUNTO_Y_COMA

    READ            shift and go to state 2
    WRITE           shift and go to state 14
    IDENT           shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 3
    FOR             shift and go to state 12


    WhileParAb                     shift and go to state 1
    Sent                           shift and go to state 6
    SentWhile                      shift and go to state 7
    ParteIniFor                    shift and go to state 8
    SentIf                         shift and go to state 9
    SentAsig                       shift and go to state 10
    SeccionIni                     shift and go to state 13
    ParteDir                       shift and go to state 15
    ListSent                       shift and go to state 5
    ParteWhile                     shift and go to state 16
    SentFor                        shift and go to state 18
    Program                        shift and go to state 4
    ParteIf                        shift and go to state 19

state 1

    (25) ParteWhile -> WhileParAb . Cond PAR_CERR LLAVE_AB
    (37) Cond -> . Expresion MENOR_IGUAL Expresion
    (38) Cond -> . Expresion MENOR_QUE Expresion
    (39) Cond -> . Expresion MAYOR_IGUAL Expresion
    (40) Cond -> . Expresion MAYOR_QUE Expresion
    (41) Cond -> . Expresion IGUAL_IGUAL Expresion
    (42) Cond -> . Expresion DISTINTO Expresion
    (43) Cond -> . Expresion
    (44) Cond -> . Cond YLOG Cond
    (45) Cond -> . Cond OLOG Cond
    (28) Expresion -> . Expresion SU Expresion
    (29) Expresion -> . Expresion RE Expresion
    (30) Expresion -> . Expresion MULT Expresion
    (31) Expresion -> . Expresion DIV Expresion
    (32) Expresion -> . Expresion MOD Expresion
    (33) Expresion -> . IDENT
    (34) Expresion -> . Constante
    (35) Expresion -> . PAR_AB Expresion PAR_CERR
    (36) Expresion -> . RE Expresion
    (46) Constante -> . TBOOLEAN
    (47) Constante -> . FBOOLEAN
    (48) Constante -> . ENTERO
    (49) Constante -> . REAL

    IDENT           shift and go to state 28
    PAR_AB          shift and go to state 25
    RE              shift and go to state 24
    TBOOLEAN        shift and go to state 23
    FBOOLEAN        shift and go to state 21
    ENTERO          shift and go to state 26
    REAL            shift and go to state 20


    Expresion                      shift and go to state 27
    Constante                      shift and go to state 22
    Cond                           shift and go to state 29

state 2

    (8) Sent -> READ . PAR_AB IDENT PAR_CERR PUNTO_Y_COMA

    PAR_AB          shift and go to state 30



state 3

    (26) WhileParAb -> WHILE . PAR_AB

    PAR_AB          shift and go to state 31



state 4

    (0) S' -> Program .




state 5

    (1) Program -> ListSent .
    (3) ListSent -> ListSent . Sent
    (4) Sent -> . SentAsig
    (5) Sent -> . SentIf
    (6) Sent -> . SentWhile
    (7) Sent -> . SentFor
    (8) Sent -> . READ PAR_AB IDENT PAR_CERR PUNTO_Y_COMA
    (9) Sent -> . WRITE PAR_AB Expresion PAR_CERR PUNTO_Y_COMA
    (11) SentAsig -> . ParteDir ASIG Expresion PUNTO_Y_COMA
    (13) SentIf -> . ParteIf SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
    (14) SentIf -> . ParteIf SentVIf2
    (24) SentWhile -> . ParteWhile ParteSentW LLAVE_CERR
    (19) SentFor -> . ParteIniFor ParteSentIncF LSentFor LLAVE_CERR
    (10) ParteDir -> . IDENT
    (15) ParteIf -> . IF PAR_AB Cond PAR_CERR LLAVE_AB
    (25) ParteWhile -> . WhileParAb Cond PAR_CERR LLAVE_AB
    (20) ParteIniFor -> . SeccionIni Cond PUNTO_Y_COMA
    (26) WhileParAb -> . WHILE PAR_AB
    (21) SeccionIni -> . FOR PAR_AB SentAsig2 PUNTO_Y_COMA

    $end            reduce using rule 1 (Program -> ListSent .)
    READ            shift and go to state 2
    WRITE           shift and go to state 14
    IDENT           shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 3
    FOR             shift and go to state 12


    ParteIniFor                    shift and go to state 8
    WhileParAb                     shift and go to state 1
    SeccionIni                     shift and go to state 13
    SentWhile                      shift and go to state 7
    ParteWhile                     shift and go to state 16
    SentFor                        shift and go to state 18
    SentIf                         shift and go to state 9
    SentAsig                       shift and go to state 10
    ParteIf                        shift and go to state 19
    Sent                           shift and go to state 32
    ParteDir                       shift and go to state 15

state 6

    (2) ListSent -> Sent .

    READ            reduce using rule 2 (ListSent -> Sent .)
    WRITE           reduce using rule 2 (ListSent -> Sent .)
    IDENT           reduce using rule 2 (ListSent -> Sent .)
    IF              reduce using rule 2 (ListSent -> Sent .)
    WHILE           reduce using rule 2 (ListSent -> Sent .)
    FOR             reduce using rule 2 (ListSent -> Sent .)
    LLAVE_CERR      reduce using rule 2 (ListSent -> Sent .)
    $end            reduce using rule 2 (ListSent -> Sent .)



state 7

    (6) Sent -> SentWhile .

    READ            reduce using rule 6 (Sent -> SentWhile .)
    WRITE           reduce using rule 6 (Sent -> SentWhile .)
    IDENT           reduce using rule 6 (Sent -> SentWhile .)
    IF              reduce using rule 6 (Sent -> SentWhile .)
    WHILE           reduce using rule 6 (Sent -> SentWhile .)
    FOR             reduce using rule 6 (Sent -> SentWhile .)
    LLAVE_CERR      reduce using rule 6 (Sent -> SentWhile .)
    $end            reduce using rule 6 (Sent -> SentWhile .)



state 8

    (19) SentFor -> ParteIniFor . ParteSentIncF LSentFor LLAVE_CERR
    (22) ParteSentIncF -> . SentAsig2 PAR_CERR LLAVE_AB
    (12) SentAsig2 -> . ParteDir ASIG Expresion
    (10) ParteDir -> . IDENT

    IDENT           shift and go to state 11


    SentAsig2                      shift and go to state 33
    ParteDir                       shift and go to state 34
    ParteSentIncF                  shift and go to state 35

state 9

    (5) Sent -> SentIf .

    READ            reduce using rule 5 (Sent -> SentIf .)
    WRITE           reduce using rule 5 (Sent -> SentIf .)
    IDENT           reduce using rule 5 (Sent -> SentIf .)
    IF              reduce using rule 5 (Sent -> SentIf .)
    WHILE           reduce using rule 5 (Sent -> SentIf .)
    FOR             reduce using rule 5 (Sent -> SentIf .)
    LLAVE_CERR      reduce using rule 5 (Sent -> SentIf .)
    $end            reduce using rule 5 (Sent -> SentIf .)



state 10

    (4) Sent -> SentAsig .

    READ            reduce using rule 4 (Sent -> SentAsig .)
    WRITE           reduce using rule 4 (Sent -> SentAsig .)
    IDENT           reduce using rule 4 (Sent -> SentAsig .)
    IF              reduce using rule 4 (Sent -> SentAsig .)
    WHILE           reduce using rule 4 (Sent -> SentAsig .)
    FOR             reduce using rule 4 (Sent -> SentAsig .)
    LLAVE_CERR      reduce using rule 4 (Sent -> SentAsig .)
    $end            reduce using rule 4 (Sent -> SentAsig .)



state 11

    (10) ParteDir -> IDENT .

    ASIG            reduce using rule 10 (ParteDir -> IDENT .)



state 12

    (21) SeccionIni -> FOR . PAR_AB SentAsig2 PUNTO_Y_COMA

    PAR_AB          shift and go to state 36



state 13

    (20) ParteIniFor -> SeccionIni . Cond PUNTO_Y_COMA
    (37) Cond -> . Expresion MENOR_IGUAL Expresion
    (38) Cond -> . Expresion MENOR_QUE Expresion
    (39) Cond -> . Expresion MAYOR_IGUAL Expresion
    (40) Cond -> . Expresion MAYOR_QUE Expresion
    (41) Cond -> . Expresion IGUAL_IGUAL Expresion
    (42) Cond -> . Expresion DISTINTO Expresion
    (43) Cond -> . Expresion
    (44) Cond -> . Cond YLOG Cond
    (45) Cond -> . Cond OLOG Cond
    (28) Expresion -> . Expresion SU Expresion
    (29) Expresion -> . Expresion RE Expresion
    (30) Expresion -> . Expresion MULT Expresion
    (31) Expresion -> . Expresion DIV Expresion
    (32) Expresion -> . Expresion MOD Expresion
    (33) Expresion -> . IDENT
    (34) Expresion -> . Constante
    (35) Expresion -> . PAR_AB Expresion PAR_CERR
    (36) Expresion -> . RE Expresion
    (46) Constante -> . TBOOLEAN
    (47) Constante -> . FBOOLEAN
    (48) Constante -> . ENTERO
    (49) Constante -> . REAL

    IDENT           shift and go to state 28
    PAR_AB          shift and go to state 25
    RE              shift and go to state 24
    TBOOLEAN        shift and go to state 23
    FBOOLEAN        shift and go to state 21
    ENTERO          shift and go to state 26
    REAL            shift and go to state 20


    Expresion                      shift and go to state 27
    Constante                      shift and go to state 22
    Cond                           shift and go to state 37

state 14

    (9) Sent -> WRITE . PAR_AB Expresion PAR_CERR PUNTO_Y_COMA

    PAR_AB          shift and go to state 38



state 15

    (11) SentAsig -> ParteDir . ASIG Expresion PUNTO_Y_COMA

    ASIG            shift and go to state 39



state 16

    (24) SentWhile -> ParteWhile . ParteSentW LLAVE_CERR
    (27) ParteSentW -> . ListSent
    (2) ListSent -> . Sent
    (3) ListSent -> . ListSent Sent
    (4) Sent -> . SentAsig
    (5) Sent -> . SentIf
    (6) Sent -> . SentWhile
    (7) Sent -> . SentFor
    (8) Sent -> . READ PAR_AB IDENT PAR_CERR PUNTO_Y_COMA
    (9) Sent -> . WRITE PAR_AB Expresion PAR_CERR PUNTO_Y_COMA
    (11) SentAsig -> . ParteDir ASIG Expresion PUNTO_Y_COMA
    (13) SentIf -> . ParteIf SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
    (14) SentIf -> . ParteIf SentVIf2
    (24) SentWhile -> . ParteWhile ParteSentW LLAVE_CERR
    (19) SentFor -> . ParteIniFor ParteSentIncF LSentFor LLAVE_CERR
    (10) ParteDir -> . IDENT
    (15) ParteIf -> . IF PAR_AB Cond PAR_CERR LLAVE_AB
    (25) ParteWhile -> . WhileParAb Cond PAR_CERR LLAVE_AB
    (20) ParteIniFor -> . SeccionIni Cond PUNTO_Y_COMA
    (26) WhileParAb -> . WHILE PAR_AB
    (21) SeccionIni -> . FOR PAR_AB SentAsig2 PUNTO_Y_COMA

    READ            shift and go to state 2
    WRITE           shift and go to state 14
    IDENT           shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 3
    FOR             shift and go to state 12


    ParteIniFor                    shift and go to state 8
    WhileParAb                     shift and go to state 1
    SeccionIni                     shift and go to state 13
    SentWhile                      shift and go to state 7
    ParteIf                        shift and go to state 19
    SentFor                        shift and go to state 18
    ParteSentW                     shift and go to state 40
    SentIf                         shift and go to state 9
    SentAsig                       shift and go to state 10
    ListSent                       shift and go to state 41
    ParteWhile                     shift and go to state 16
    Sent                           shift and go to state 6
    ParteDir                       shift and go to state 15

state 17

    (15) ParteIf -> IF . PAR_AB Cond PAR_CERR LLAVE_AB

    PAR_AB          shift and go to state 42



state 18

    (7) Sent -> SentFor .

    READ            reduce using rule 7 (Sent -> SentFor .)
    WRITE           reduce using rule 7 (Sent -> SentFor .)
    IDENT           reduce using rule 7 (Sent -> SentFor .)
    IF              reduce using rule 7 (Sent -> SentFor .)
    WHILE           reduce using rule 7 (Sent -> SentFor .)
    FOR             reduce using rule 7 (Sent -> SentFor .)
    LLAVE_CERR      reduce using rule 7 (Sent -> SentFor .)
    $end            reduce using rule 7 (Sent -> SentFor .)



state 19

    (13) SentIf -> ParteIf . SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
    (14) SentIf -> ParteIf . SentVIf2
    (16) SentVIf -> . ListSent LLAVE_CERR
    (17) SentVIf2 -> . ListSent LLAVE_CERR
    (2) ListSent -> . Sent
    (3) ListSent -> . ListSent Sent
    (4) Sent -> . SentAsig
    (5) Sent -> . SentIf
    (6) Sent -> . SentWhile
    (7) Sent -> . SentFor
    (8) Sent -> . READ PAR_AB IDENT PAR_CERR PUNTO_Y_COMA
    (9) Sent -> . WRITE PAR_AB Expresion PAR_CERR PUNTO_Y_COMA
    (11) SentAsig -> . ParteDir ASIG Expresion PUNTO_Y_COMA
    (13) SentIf -> . ParteIf SentVIf ELSE LLAVE_AB SentVElse LLAVE_CERR
    (14) SentIf -> . ParteIf SentVIf2
    (24) SentWhile -> . ParteWhile ParteSentW LLAVE_CERR
    (19) SentFor -> . ParteIniFor ParteSentIncF LSentFor LLAVE_CERR
    (10) ParteDir -> . IDENT
    (15) ParteIf -> . IF PAR_AB Cond PAR_CERR LLAVE_AB
    (25) ParteWhile -> . WhileParAb Cond PAR_CERR LLAVE_AB
    (20) ParteIniFor -> . SeccionIni Cond PUNTO_Y_COMA
    (26) WhileParAb -> . WHILE PAR_AB
    (21) SeccionIni -> . FOR PAR_AB SentAsig2 PUNTO_Y_COMA

    READ            shift and go to state 2
    WRITE           shift and go to state 14
    IDENT           shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 3
    FOR             shift and go to state 12


    ParteIniFor                    shift and go to state 8
    SentVIf                        shift and go to state 44
    WhileParAb                     shift and go to state 1
    SeccionIni                     shift and go to state 13
    SentWhile                      shift and go to state 7
    ParteWhile                     shift and go to state 16
    SentFor                        shift and go to state 18
    SentVIf2                       shift and go to state 43
    SentAsig                       shift and go to state 10
    ParteDir                       shift and go to state 15
    ParteIf                        shift and go to state 19
    ListSent                       shift and go to state 45
    Sent                           shift and go to state 6
    SentIf                         shift and go to state 9

state 20

    (49) Constante -> REAL .

    MENOR_IGUAL     reduce using rule 49 (Constante -> REAL .)
    MENOR_QUE       reduce using rule 49 (Constante -> REAL .)
    MAYOR_IGUAL     reduce using rule 49 (Constante -> REAL .)
    MAYOR_QUE       reduce using rule 49 (Constante -> REAL .)
    IGUAL_IGUAL     reduce using rule 49 (Constante -> REAL .)
    DISTINTO        reduce using rule 49 (Constante -> REAL .)
    SU              reduce using rule 49 (Constante -> REAL .)
    RE              reduce using rule 49 (Constante -> REAL .)
    MULT            reduce using rule 49 (Constante -> REAL .)
    DIV             reduce using rule 49 (Constante -> REAL .)
    MOD             reduce using rule 49 (Constante -> REAL .)
    PAR_CERR        reduce using rule 49 (Constante -> REAL .)
    YLOG            reduce using rule 49 (Constante -> REAL .)
    OLOG            reduce using rule 49 (Constante -> REAL .)
    PUNTO_Y_COMA    reduce using rule 49 (Constante -> REAL .)



state 21

    (47) Constante -> FBOOLEAN .

    MENOR_IGUAL     reduce using rule 47 (Constante -> FBOOLEAN .)
    MENOR_QUE       reduce using rule 47 (Constante -> FBOOLEAN .)
    MAYOR_IGUAL     reduce using rule 47 (Constante -> FBOOLEAN .)
    MAYOR_QUE       reduce using rule 47 (Constante -> FBOOLEAN .)
    IGUAL_IGUAL     reduce using rule 47 (Constante -> FBOOLEAN .)
    DISTINTO        reduce using rule 47 (Constante -> FBOOLEAN .)
    SU              reduce using rule 47 (Constante -> FBOOLEAN .)
    RE              reduce using rule 47 (Constante -> FBOOLEAN .)
    MULT            reduce using rule 47 (Constante -> FBOOLEAN .)
    DIV             reduce using rule 47 (Constante -> FBOOLEAN .)
    MOD             reduce using rule 47 (Constante -> FBOOLEAN .)
    PAR_CERR        reduce using rule 47 (Constante -> FBOOLEAN .)
    YLOG            reduce using rule 47 (Constante -> FBOOLEAN .)
    OLOG            reduce using rule 47 (Constante -> FBOOLEAN .)
    PUNTO_Y_COMA    reduce using rule 47 (Constante -> FBOOLEAN .)



state 22

    (34) Expresion -> Constante .

    SU              reduce using rule 34 (Expresion -> Constante .)
    RE              reduce using rule 34 (Expresion -> Constante .)
    MULT            reduce using rule 34 (Expresion -> Constante .)
    DIV             reduce using rule 34 (Expresion -> Constante .)
    MOD             reduce using rule 34 (Expresion -> Constante .)
    MENOR_IGUAL     reduce using rule 34 (Expresion -> Constante .)
    MENOR_QUE       reduce using rule 34 (Expresion -> Constante .)
    MAYOR_IGUAL     reduce using rule 34 (Expresion -> Constante .)
    MAYOR_QUE       reduce using rule 34 (Expresion -> Constante .)
    IGUAL_IGUAL     reduce using rule 34 (Expresion -> Constante .)
    DISTINTO        reduce using rule 34 (Expresion -> Constante .)
    PAR_CERR        reduce using rule 34 (Expresion -> Constante .)
    YLOG            reduce using rule 34 (Expresion -> Constante .)
    OLOG            reduce using rule 34 (Expresion -> Constante .)
    PUNTO_Y_COMA    reduce using rule 34 (Expresion -> Constante .)



state 23

    (46) Constante -> TBOOLEAN .

    MENOR_IGUAL     reduce using rule 46 (Constante -> TBOOLEAN .)
    MENOR_QUE       reduce using rule 46 (Constante -> TBOOLEAN .)
    MAYOR_IGUAL     reduce using rule 46 (Constante -> TBOOLEAN .)
    MAYOR_QUE       reduce using rule 46 (Constante -> TBOOLEAN .)
    IGUAL_IGUAL     reduce using rule 46 (Constante -> TBOOLEAN .)
    DISTINTO        reduce using rule 46 (Constante -> TBOOLEAN .)
    SU              reduce using rule 46 (Constante -> TBOOLEAN .)
    RE              reduce using rule 46 (Constante -> TBOOLEAN .)
    MULT            reduce using rule 46 (Constante -> TBOOLEAN .)
    DIV             reduce using rule 46 (Constante -> TBOOLEAN .)
    MOD             reduce using rule 46 (Constante -> TBOOLEAN .)
    PAR_CERR        reduce using rule 46 (Constante -> TBOOLEAN .)
    YLOG            reduce using rule 46 (Constante -> TBOOLEAN .)
    OLOG            reduce using rule 46 (Constante -> TBOOLEAN .)
    PUNTO_Y_COMA    reduce using rule 46 (Constante -> TBOOLEAN .)



state 24

    (36) Expresion -> RE . Expresion
    (28) Expresion -> . Expresion SU Expresion
    (29) Expresion -> . Expresion RE Expresion
    (30) Expresion -> . Expresion MULT Expresion
    (31) Expresion -> . Expresion DIV Expresion
    (32) Expresion -> . Expresion MOD Expresion
    (33) Expresion -> . IDENT
    (34) Expresion -> . Constante
    (35) Expresion -> . PAR_AB Expresion PAR_CERR
    (36) Expresion -> . RE Expresion
    (46) Constante -> . TBOOLEAN
    (47) Constante -> . FBOOLEAN
    (48) Constante -> . ENTERO
    (49) Constante -> . REAL

    IDENT           shift and go to state 28
    PAR_AB          shift and go to state 25
    RE              shift and go to state 24
    TBOOLEAN        shift and go to state 23
    FBOOLEAN        shift and go to state 21
    ENTERO          shift and go to state 26
    REAL            shift and go to state 20

